--- a/main/templates/SRRT_library/book_list.html
+++ b/main/templates/SRRT_library/book_list.html
@@ -1,7 +1,7 @@
 {% if book_list %}
     <ul>
     {% for book in book_list %}
-        <li><a href="/SRRT_library/{{ book.isbn }}/">{{ book.subject }}</a></li>
+        <li><a href="{% url 'srrt_library:detail' book_isbn=book.isbn  %}">{{ book.subject }}</a></li>
     {% endfor %}
     </ul>
 {% else %}
