--- a/main/templates/SRRT_library/book_list.html
+++ b/main/templates/SRRT_library/book_list.html
@@ -1,9 +1,31 @@
-{% if book_list %}
-    <ul>
-    {% for book in book_list %}
-        <li><a href="{%url 'SRRT_library:detail' book.isbn%}">{{ book.subject }}</a></li>
-    {% endfor %}
-    </ul>
-{% else %}
-    <p>책이 없습니다.</p>
-{% endif %}
+{% load static %}
+<link rel="stylesheet" type="text/css" href="{% static 'bootstrap.min.css' %}">
+
+<div class="container my-3">
+    <table class="table">
+        <thead>
+        <tr class="table-dark">
+            <th>번호</th>
+            <th>제목</th>
+            <th>보유 갯수</th>
+        </tr>
+        </thead>
+        <tbody>
+        {% if book_list %}
+        {% for book in book_list %}
+        <tr>
+            <td>{{ forloop.counter }}</td>
+            <td>
+                <a href="{% url 'SRRT_library:detail' book.isbn %}">{{ book.subject }}</a>
+            </td>
+            <td>{{ book.count }}</td>
+        </tr>
+        {% endfor %}
+        {% else %}
+        <tr>
+            <td colspan="3">책이 등록되지 않았습니다. </td>
+        </tr>
+        {% endif %}
+        </tbody>
+    </table>
+</div>
