--- a/main/templates/SRRT_library/book_detail.html
+++ b/main/templates/SRRT_library/book_detail.html
@@ -10,11 +10,13 @@
     <div style="float:left;">
         <form action="{% url 'SRRT_library:checkout' book.isbn %}" method="post">
         {% csrf_token %}
-        {% if user.is_authenticated%}
-            {% if book.count > 0 %}
-                <input type="submit" value="대출">
-            {% else %}
-                <input type="submit" value="개수 부족" disabled>
+        {% if user.is_authenticated %}
+            {% if not record_exist %}
+                {% if book.count > 0 %}
+                    <input type="submit" value="대출">
+                {% else %}
+                    <input type="submit" value="개수 부족" disabled>
+                {% endif %}
             {% endif %}
         {% else %}
             <input type="submit" value="로그인이 필요합니다." disabled>
