--- a/main/templates/SRRT_library/book_list.html
+++ b/main/templates/SRRT_library/book_list.html
@@ -1,6 +1,30 @@
 {% extends 'base.html' %}
 {% block content %}
-<div class="container my-3">
+<div class="container my-2">
+    <div class="row-4">
+        <div>
+            <label for="select_category">카테고리:</label>
+            <select class="custom-select" id="select_category" >
+                <option value="all" selected>all</option>
+                <option value="CG">COMPUTER_GENERAL</option>
+                <option value="PP">PHILOSOPHY_PSYCHOLOGY </option>
+                <option value="RE">RELIGION</option>
+                <option value="SO">SOCIAL</option>
+                <option value="LA">LANGUAGE</option>
+                <option value="SC">SCIENCE</option>
+                <option value="TE">TECHNOLOGY</option>
+                <option value="AR">ARTS_RECREATION</option>
+                <option value="LI">LITERATURE</option>
+                <option value="HG">HISTORY_GEOGRAPHY</option>
+            </select>
+        <div>
+        <div class="input-group">
+            <input type="text" id="search_kw" class="form-control" value="{{ kw|default_if_none:'' }}">
+            <div class="input-group-append">
+                <button class="btn btn-outline-secondary" type="button" id="btn_search">찾기</button>
+            </div>
+        </div>
+    </div>
     <table class="table">
         <thead>
         <tr class="table-dark">
@@ -32,7 +56,8 @@
         <!-- 이전페이지 -->
         {% if question_list.has_previous %}
         <li class="page-item">
-            <a class="page-link" href="?page={{ question_list.previous_page_number }}">이전</a>
+            <a class="page-link" data-page="{{ question_list.previous_page_number }}"
+            href="javascript:void(0)">이전</a>
         </li>
         {% else %}
         <li class="page-item disabled">
@@ -49,15 +74,16 @@
         </li>
         {% else %}
         <li class="page-item">
-            <a class="page-link" href="?page={{ page_number }}">{{ page_number }}</a>
-        </li>
+            <a class="page-link" data-page="{{ page_number }}"
+           href="javascript:void(0)">{{ page_number }}</a>
         {% endif %}
         {% endif %}
         {% endfor %}
         <!-- 다음페이지 -->
         {% if question_list.has_next %}
         <li class="page-item">
-            <a class="page-link" href="?page={{ question_list.next_page_number }}">다음</a>
+            <a class="page-link" data-page="{{ question_list.next_page_number }}"
+           href="javascript:void(0)">다음</a>
         </li>
         {% else %}
         <li class="page-item disabled">
@@ -67,4 +93,31 @@
     </ul>
     <!-- 페이징처리 끝 -->
 </div>
+<form id="searchForm" method="get" action="{% url 'index' %}">
+    <input type="hidden" id="kw" name="kw" value="{{ kw|default_if_none:'' }}">
+    <input type="hidden" id="page" name="page" value="{{ page }}">
+    <input type="hidden" id="category" name="category" value="all">
+</form>
+{% endblock %}
+{% block script %}
+<script type='text/javascript'>
+const page_elements = document.getElementsByClassName("page-link");
+Array.from(page_elements).forEach(function(element) {
+    element.addEventListener('click', function() {
+        document.getElementById('page').value = this.dataset.page;
+        document.getElementById('searchForm').submit();
+    });
+});
+
+
+const btn_search = document.getElementById("btn_search");
+btn_search.addEventListener('click', function() {
+    document.getElementById('kw').value = document.getElementById('search_kw').value;
+    document.getElementById('page').value = 1;  // 검색버튼을 클릭할 경우 1페이지부터 조회한다.
+    document.getElementById('category').value = document.getElementById('select_category').value;
+    document.getElementById('searchForm').submit();
+});
+
+
+</script>
 {% endblock %}
