[ADD] - category and author in book detail page

--- a/main/templates/SRRT_library/book_detail.html
+++ b/main/templates/SRRT_library/book_detail.html
@@ -5,6 +5,8 @@
     {{ book.isbn }}
 </div>
 <h5>{{ book.count }}개 있습니다.</h5>
+카테고리 : {{book.kinds_of_books}} <br>
+저작자 : {{book.author}}
 
 <div>
     <div style="float:left;">
