--- a/main/templates/navbar.html
+++ b/main/templates/navbar.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light border-bottom">
+<nav class="navbar navbar-light bg-light border-bottom">
     <div class="container-fluid">
         <a class="navbar-brand" href="{% url 'SRRT_library:index' %}">3135 library</a>
         <button class="navbar-toggler" type="button"
@@ -13,7 +13,10 @@
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
                     {% if user.is_authenticated %}
-                    <a class="nav-link" href="{% url 'common:logout' %}">{{ user.username }} (로그아웃)</a>
+                    <div >   
+                        <a class="nav-link" href="{% url 'common:logout' %}">{{ user.username }} (로그아웃)</a>
+                        <a class="nav-link" href="{% url 'SRRT_library:my_page' %}">My page</a>
+                    </div>
                     {% else %}
                     <a class="nav-link" href="{% url 'common:login' %}">로그인</a>
                     {% endif %}
