--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" type="text/css" href="{% static 'bootstrap.min.css' %}">
+    <link rel="shortcut icon" href="{% static 'chemical.ico' %}">
     <title>3135 library</title>
 </head>
 <body>
